--- a/portfolio.html
+++ b/portfolio.html
@@ -43,68 +43,95 @@
                 </ul>
             <h2 class="visually-hidden">List</h2>
                 <ul class="photo-list list">
-                        <li class="photo">
+                        <li class="photo box">
+                           <div class="box">
                             <img class="image" src="./images/por1.jpg" alt="photo1" width="360">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <div class="info">
+                            <h3 class="list-head">Banking App Interface Concept</h3>
+                            <p class="list-text">App</p>
+                        </div>
+                        </li>
+                        <li class="photo box">
+                            <div class="box">
+                                <img class="image" src="./images/por2.jpg" alt="photo2" width="360">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="info">
-                                <h3 class="list-head">Banking App Interface Concept</h3>
-                                <p class="list-text">App</p>
+                                    <h3 class="list-head">Cashless Payment</h3>
+                                    <p class="list-text">Marketing</p>
                             </div >
                         </li>
-                        <li class="photo">
-                            <img class="image" src="./images/por2.jpg" alt="photo2" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Cashless Payment</h3>
-                                <p class="list-text">Marketing</p>
-                            </div >
+                        <li class="photo box">
+                                <div class="box">
+                                    <img class="image" src="./images/por3.jpg" alt="photo3" width="360">
+                                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
+                                <div class="info">
+                                    <h3 class="list-head">Meditaion App</h3>
+                                    <p class="list-text">App</p>
+                                </div >
+                        </li>
+                        <li class="photo box">
+                                <div class="box">
+                                    <img class="image" src="./images/por4.jpg" alt="photo4" width="360">
+                                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
+                                <div class="info">
+                                    <h3 class="list-head">Taxi Service</h3>
+                                    <p class="list-text">Marketing</p>
+                                </div >
+                        </li>
+                        <li class="photo box">
+                                <div class="box">
+                                    <img class="image" src="./images/por5.jpg" alt="photo5" width="360">
+                                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
+                                <div class="info">
+                                    <h3 class="list-head">Screen Illustrations</h3>
+                                    <p class="list-text">Design</p>
+                                </div >
                         </li>
                         <li class="photo">
-                            <img class="image" src="./images/por3.jpg" alt="photo3" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Meditaion App</h3>
-                                <p class="list-text">App</p>
-                            </div >
+                            <div class="box">
+                                <img class="image" src="./images/por6.jpg" alt="photo6" width="360">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                                <div class="info">
+                                    <h3 class="list-head">Online Courses</h3>
+                                    <p class="list-text">Marketing</p>
+                                </div >
                         </li>
                         <li class="photo">
-                            <img class="image" src="./images/por4.jpg" alt="photo4" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Taxi Service</h3>
-                                <p class="list-text">Marketing</p>
-                            </div >
+                            <div class="box">
+                                <img class="image" src="./images/por7.jpg" alt="photo7" width="360">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>    
+                                <div class="info">
+                                    <h3 class="list-head">Instagram Stories Concept</h3>
+                                    <p class="list-text">Design</p>
+                                </div >
                         </li>
                         <li class="photo">
-                            <img class="image" src="./images/por5.jpg" alt="photo5" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Screen Illustrations</h3>
-                                <p class="list-text">Design</p>
-                            </div >
+                                <div class="box">
+                                    <img class="image" src="./images/por8.jpg" alt="photo8" width="360">
+                                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
+                                <div class="info">
+                                    <h3 class="list-head">Organic Food</h3>
+                                    <p class="list-text">Web Site</p>
+                                </div >
                         </li>
-                        <li class="photo">
-                            <img class="image" src="./images/por6.jpg" alt="photo6" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Online Courses</h3>
-                                <p class="list-text">Marketing</p>
-                            </div >
-                        </li>
-                        <li class="photo">
-                            <img class="image" src="./images/por7.jpg" alt="photo7" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Instagram Stories Concept</h3>
-                                <p class="list-text">Design</p>
-                            </div >
-                        </li>
-                        <li class="photo">
-                            <img class="image" src="./images/por8.jpg" alt="photo8" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Organic Food</h3>
-                                <p class="list-text">Web Site</p>
-                            </div >
-                        </li>
-                        <li class="photo">
-                            <img class="image" src="./images/por9.jpg" alt="photo9" width="360">
-                            <div class="info">
-                                <h3 class="list-head">Fresh Coffee</h3>
-                                <p class="list-text">Web Site</p>
-                            </div >
+                        <li class="photo box">
+                               <div class="box">
+                                    <img class="image" src="./images/por9.jpg" alt="photo9" width="360">
+                                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                               </div >
+                                <div class="info">
+                                    <h3 class="list-head">Fresh Coffee</h3>
+                                    <p class="list-text">Web Site</p>
+                                </div >
                         </li>
                 </ul>
             </div >
