--- a/index.html
+++ b/index.html
@@ -344,8 +344,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button data-modal-close>close</button>
-            <p class="katya">Катінька я тебе люблю! Ти найкраща в світі!</p>
+            <button class="close" data-modal-close>
+                <svg class="close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-Vector-3"></use>
+                </svg>
+            </button>
         </div>
     </div>
     <script src="./js/modal.js"></script>
